[gd_scene load_steps=6 format=3 uid="uid://cxijyiohpsxox"]

[ext_resource type="Script" path="res://Scenes/Production Scene/production_scene.gd" id="1_ppnuj"]
[ext_resource type="Texture2D" uid="uid://dolqe1m03hiqm" path="res://Art/test_background.png" id="2_hqlpj"]
[ext_resource type="PackedScene" uid="uid://dards2t3hpsk3" path="res://Scenes/Production Scene/drawer.tscn" id="3_12tai"]
[ext_resource type="PackedScene" uid="uid://6jhv3d72lvo6" path="res://Scenes/Production Scene/destructor.tscn" id="5_hecpo"]
[ext_resource type="PackedScene" uid="uid://374iqxuwyl0t" path="res://Scenes/Production Scene/storer.tscn" id="6_0n1vi"]

[node name="production_scene" type="Node2D"]
script = ExtResource("1_ppnuj")

[node name="background" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("2_hqlpj")
offset = Vector2(640, 360)

[node name="drawer" parent="." instance=ExtResource("3_12tai")]

[node name="destructor" parent="." instance=ExtResource("5_hecpo")]
position = Vector2(1201, 646)

[node name="storer" parent="." instance=ExtResource("6_0n1vi")]
position = Vector2(1199, 394)

[connection signal="spawn_blue_potion_drawer" from="drawer" to="." method="_on_drawer_spawn_blue_potion_drawer"]
[connection signal="spawn_knife_drawer" from="drawer" to="." method="_on_drawer_spawn_knife_drawer"]
[connection signal="spawn_red_potion_drawer" from="drawer" to="." method="_on_drawer_spawn_red_potion_drawer"]
